Statistics architecture